--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "nuxt-basic-sitemap",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Basic sitemap module for Nuxt",
   "repository": "https://github.com/nazarii-semeniuk/nuxt-basic-sitemap",
   "license": "MIT",
   "type": "module",
+  "keywords": ["nuxt sitemap", "nuxt", "sitemap", "nuxt simple sitemap", "nuxt basic sitemap"],
   "exports": {
     ".": {
       "types": "./dist/types.d.mts",
