--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "nuxt-basic-sitemap",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Basic sitemap module for Nuxt",
   "repository": "https://github.com/nazarii-semeniuk/nuxt-basic-sitemap",
   "license": "MIT",
   "type": "module",
-  "keywords": ["nuxt sitemap", "nuxt", "sitemap", "nuxt simple sitemap", "nuxt basic sitemap"],
+  "keywords": [
+    "nuxt sitemap",
+    "nuxt",
+    "sitemap",
+    "nuxt simple sitemap",
+    "nuxt basic sitemap"
+  ],
   "author": "Nazarii Semeniuk <qnazar.semenyuk@gmail.com>",
   "exports": {
     ".": {
